--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ p {
         justify-content: center;
         color: whitesmoke;
         background: #484872;
-        /* margin-top: -900px;  */
+        margin-top: -900px; 
         transition: all 0.5s ease; 
     }
     .mobile-menu {
