--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ ul {
 header {
     height: 100vh;
     width: 100vw;
-    background-image: url(image.jpg);
+    background-image: url(./images/image.jpg);
     background-position: top;
     background-size: cover;
     display: flex;
@@ -140,7 +140,7 @@ p {
 .explore {
     width: 100%;
     height: 100vh;
-    background: url(explore.jpg);
+    background: url(./images/explore.jpg);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
